2015-01-07  Ola Jeppsson  <ola@adapteva.com>

	* src/e-hal/src/epiphany-hal.c (int e_reset_system): Remove
	dead code. Programming the link clock divider is not needed with
	the new bitstream.

2014-12-23  Ola Jeppsson  <ola@adapteva.com>

	* src/e-hal/src/epiphany-hal.c (static inline void *aligned_memcpy):
	Implemented wrapper that only calls memcpy when src dst and size
	are 32 bit WORD aligned.
	(ssize_t ee_write_buf): Use aligned_memcpy() instead of memcpy().

2014-12-04  Ola Jeppsson  <ola@adapteva.com>

	* bsps/parallella64/platform.hdf: Adjust ESYS register base to
	match new eLink PL.
	* bsps/parallella_E16G3_1GB/parallella_E16G3_1GB.hdf: Likewise.

2014-12-04  Ola Jeppsson  <ola@adapteva.com>

	* src/e-hal/src/epiphany-hal.c (ssize_t ee_write_buf): Temporarily
	limit writes to 4 byte chunks to work around temporary limitations
	new eLink programmable logic.

2014-12-04  Ola Jeppsson  <ola@adapteva.com>

	* src/e-hal/src/epiphany-hal-data.h: Update to match new PL eLink
	interface.
	* src/e-hal/src/epiphany-hal.c (int e_reset_system):
	Likewise.

2014-10-31  Ola Jeppsson  <ola@adapteva.com>

	* Create 2014.11 branch

2014-10-29  Ola Jeppsson  <ola@adapteva.com>

	* src/e-xml/src/epiphany-hal.c (int e_reset_system): Don't call
	e_shm_reset()
	* src/e-hal/src-epiphany-shm-manager.c (int e_shm_reset): Remove
	function
	(int e_shm_init): Move all shm table initialization and reset.
	logic here. If the shm table passes the sanity check, do nothing.
	Otherwise reset it. This needs more work but now programs can
	access the table concurrently.
	* src/e-hal/src/epiphany-shm-manager.h: Remove e_shm_reset()
	function prototype.

2014-10-29  Ola Jeppsson  <ola@adapteva.com>

	* src/e-utils/e-loader/src/e-loader.c: Fixed some segfaults.

2014-10-24  Ola Jeppsson  <ola@adapteva.com>

	* src/e-server/e-server.sh:
	* src/e-utils/e-hw-rev/e-hw-rev.sh:
	* src/e-utils/e-loader/e-loader.sh:
	* src/e-utils/e-read/e-read.sh:
	* src/e-utils/e-reset/e-reset.sh: