@@ -46,6 +46,7 @@ int      ee_read_reg(e_epiphany_t *dev, unsigned row, unsigned col, const off_t 
 ssize_t  ee_write_reg(e_epiphany_t *dev, unsigned row, unsigned col, off_t to_addr, int data);
 int      ee_read_esys(off_t from_addr);
 ssize_t  ee_write_esys(off_t to_addr, int data);
+int      ee_disable_system(void);
 //
 // For legacy code support
 ssize_t  ee_read_abs(unsigned address, void *buf, size_t size);
